--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 #include <iostream>
 #include <string>
-#include <windows.h>
 
 using namespace std;
 
@@ -8,12 +7,12 @@ class Student {
 private:
     string name;
     int age;
-    string id;
+    string familia;
 public:
-    void registerStudent(string studentName, int studentAge, string studentId) {
+    void registerStudent(string studentName, int studentAge, string studentfamilia) {
         name = studentName;
         age = studentAge;
-        id = studentId;
+        familia = studentId;
     }
 };
 
